# domainwatch

./: .gitignore  Cargo.toml  README.md  certwatch.db
src/: main.rs  ui.rs
src/checks/: crtsh.rs  dns.rs  enumerate.rs  http.rs  mod.rs  rdap.rs  runner.rs  tls.rs
src/db/: mod.rs
src/models/: mod.rs
